arreglo para el link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Claude Monet Gallery</title>
+    <title>Claude Monet Homage</title>
     <link rel="stylesheet" href="claudet-monet.css" />
     <link
       rel="stylesheet"
