--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <header id="header">
             <div class="logo">
               <img
-                src="/imagenes/Monet__Claude_1840-1926_02_Signature-removebg-preview.png"
+                src="./imagenes/Monet__Claude_1840-1926_02_Signature-removebg-preview.png"
                 alt="Claude Monet signature"
               />
             </div>
@@ -42,7 +42,7 @@
         <section>
           <img
             id="nenufares"
-            src="/imagenes/nenufares.jpg"
+            src="./imagenes/nenufares.jpg"
             alt="Los nenufares de Monet"
           />
           <figcaption id="foto-nenufar">
@@ -84,7 +84,7 @@
         <div>
           <img
             id="retrato"
-            src="/imagenes/retratomonet.jpeg"
+            src="./imagenes/retratomonet.jpeg"
             alt="Autorretrato de Monet"
           />
           <figcaption>Autorretrato en su taller</figcaption>
@@ -105,7 +105,7 @@
         <div id="obra3">
           <img
             id="impresion"
-            src="/imagenes/impresion.jpeg"
+            src="./imagenes/impresion.jpeg"
             alt="impresion, sol naciente de Monet"
           />
           <figcaption>Impresion, Sol Naciente</figcaption>
